# MadridFinesManager

./: .gitignore  README.md  how_it_works.ipynb  pyproject.toml
tests/: test_cache.py  test_cache_url.py  test_madrid_fines.py
tests/fixtures/: 210104-15-multas-circulacion-detalle-csv.csv  210104-339-multas-circulacion-detalle-csv.csv  madrid_multas.html
traffic_fines/: __init__.py
traffic_fines/cache/: Cache.py  CacheUrl.py  __init__.py
traffic_fines/madrid_fines/: MadridFines.py  __init__.py
